<resources>
    <string name="app_name">MyAppSopa</string>
    <string name="buttonJugar">Jugar</string>
    <string name="etiquetaNombre">Ingrese su nombre</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="buttonComenzar">Comenzar</string>
    <string name="buttonContinuar">Continuar</string>
    <string name="buttonCreditos">Creditos</string>
    <string name="buttonSalir">Salir</string>
    <string name="textView">Informacion Importante</string>
    <string name="textView2">Programado por Jimer Sayago </string>
    <string name="textView3">DNI: 24.611.509</string>
    <string name="textView4">Ing. en Informatica - UNET</string>
    <string name="textView5">creado el 11/02/2020</string>
    <string name="textView6">version 1.0</string>
    <string name="configuracion">Configuracion</string>
    <string name="creditos">Creditos</string>
    <string name="salirJuego">Volver al Menu</string>
    <string name="etiquetaJugador">Jugador</string>
    <string name="etiquetaNivel">Nivel</string>
    <string name="nombreJugardor"></string>
    <string name="textView15"></string>
    <string name="button0"></string>
    <string name="button1"></string>
    <string name="button2"></string>
    <string name="button3"></string>
    <string name="button4"></string>
    <string name="button5"></string>
    <string name="button6"></string>
    <string name="button7"></string>
    <string name="button8"></string>
    <string name="button9"></string>
    <string name="button10"></string>
    <string name="button11"></string>
    <string name="button12"></string>
    <string name="button13"></string>
    <string name="button14"></string>
    <string name="button15"></string>
    <string name="button16"></string>
    <string name="button17"></string>
    <string name="button18"></string>
    <string name="button19"></string>
    <string name="button20"></string>
    <string name="button21"></string>
    <string name="button22"></string>
    <string name="button23"></string>
    <string name="button24"></string>
    <string name="button25"></string>
    <string name="button26"></string>
    <string name="button27"></string>
    <string name="button28"></string>
    <string name="button29"></string>
    <string name="button30"></string>
    <string name="button31"></string>
    <string name="button32"></string>
    <string name="button33"></string>
    <string name="button34"></string>
    <string name="button35"></string>
    <string name="button36"></string>
    <string name="button37"></string>
    <string name="button38"></string>
    <string name="button39"></string>
    <string name="button40"></string>
    <string name="button41"></string>
    <string name="button42"></string>
    <string name="button43"></string>
    <string name="button44"></string>
    <string name="button45"></string>
    <string name="button46"></string>
    <string name="button47"></string>
    <string name="button48"></string>
    <string name="button49"></string>
    <string name="button50"></string>
    <string name="button51"></string>
    <string name="button52"></string>
    <string name="button53"></string>
    <string name="button54"></string>
    <string name="button55"></string>
    <string name="button56"></string>
    <string name="button57"></string>
    <string name="button58"></string>
    <string name="button59"></string>
    <string name="button60"></string>
    <string name="button61"></string>
    <string name="button62"></string>
    <string name="button63"></string>
    <string name="button64"></string>
    <string name="button65"></string>
    <string name="button66"></string>
    <string name="button67"></string>
    <string name="button68"></string>
    <string name="button69"></string>
    <string name="button70"></string>
    <string name="button71"></string>
    <string name="button72"></string>
    <string name="button73"></string>
    <string name="button74"></string>
    <string name="button75"></string>
    <string name="button76"></string>
    <string name="button77"></string>
    <string name="button78"></string>
    <string name="button79"></string>
    <string name="button80"></string>
    <string name="button81"></string>
    <string name="button82"></string>
    <string name="button83"></string>
    <string name="button84"></string>
    <string name="button85"></string>
    <string name="button86"></string>
    <string name="button87"></string>
    <string name="button88"></string>
    <string name="button89"></string>
    <string name="button90"></string>
    <string name="button91"></string>
    <string name="button92"></string>
    <string name="button93"></string>
    <string name="button94"></string>
    <string name="button95"></string>
    <string name="button96"></string>
    <string name="button97"></string>
    <string name="button98"></string>
    <string name="button99"></string>
    <string name="button100"></string>
    <string name="button101"></string>
    <string name="button102"></string>
    <string name="button103"></string>
    <string name="button104"></string>
    <string name="button105"></string>
    <string name="button106"></string>
    <string name="button107"></string>
    <string name="button108"></string>
    <string name="button109"></string>
    <string name="button110"></string>
    <string name="button111"></string>
    <string name="button112"></string>
    <string name="button113"></string>
    <string name="button114"></string>
    <string name="button115"></string>
    <string name="button116"></string>
    <string name="button117"></string>
    <string name="button118"></string>
    <string name="button119"></string>
    <string name="button120"></string>
    <string name="button121"></string>
    <string name="button122"></string>
    <string name="button123"></string>
    <string name="button124"></string>
    <string name="button125"></string>
    <string name="button126"></string>
    <string name="button127"></string>
    <string name="button128"></string>
    <string name="button129"></string>
    <string name="button130"></string>
    <string name="button131"></string>
    <string name="button132"></string>
    <string name="button133"></string>
    <string name="button134"></string>
    <string name="button135"></string>
    <string name="button136"></string>
    <string name="button137"></string>
    <string name="button138"></string>
    <string name="button139"></string>
    <string name="button140"></string>
    <string name="button141"></string>
    <string name="button142"></string>
    <string name="button143"></string>
</resources>
