<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:tools="http://schemas.android.com/tools"
    tools.context=".Comenzar">
    tools.context=".Continuar">

    <item
        android:id="@+id/configuracion"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/configuracion"
        app:showAsAction="never" />

    <item
        android:id="@+id/creditos"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/creditos"
        app:showAsAction="never" />

    <item
        android:id="@+id/salirJuego"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/salirJuego"
        app:showAsAction="never"/>
</menu>